--- a/public/chat.html
+++ b/public/chat.html
@@ -11,16 +11,15 @@
 
 <body>
     <div class="chat">
-        <div class="chat__sidebar">
-
-        </div>
+        <div id="sidebar" class="chat__sidebar"></div>
 
         <div class="chat__main">
             <div id="messages" class="chat__messages"></div>
 
             <div class="compose">
                 <form id="message-form">
-                    <input id="message-form-input" name="message" type="text" placeholder="message" />
+                    <input id="message-form-input" name="message" type="text" placeholder="message" required
+                        autocomplete="off" />
                     <button id="message-form-send">Send</button>
                 </form>
 
@@ -35,7 +34,7 @@
     <script id="message-template" type="text/html">
         <div class="message">
             <p>
-                <span class="message__name">Some user Name </span>
+                <span class="message__name">{{username}} </span>
                 <span class="message__meta">{{createdAt}}</span>
             </p>
             <p> {{message}}</p>
@@ -45,11 +44,21 @@
     <script id="location-template" type="text/html">
         <div>
             <p>
-                <span class="message__name">Some user Name </span>
+                <span class="message__name">{{username}}</span>
                 <span class="message__meta">{{createdAt}}</span>
             </p>
             <p><a href={{locationURL}} target="_blank">My current location</a></p>
         </div>
+    </script>
+
+    <script id="sidebar-template" type="text/html">
+        <h2 class="room-title">{{room}}</h2>
+        <h3 class="list-title">Users</h3>
+        <ul class="users">
+            {{#users}}
+                <li>{{username}}<li>
+            {{/users}}
+        </ul>
     </script>
 
     <script src="/socket.io/socket.io.js"></script>
